# trace-impurities-ce-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md  external_resources_catalog.json
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: general.tex  macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
papers/: README.md  arxiv_results.json
results/data/: exp1_cycles_Fe_1000_ppm.csv  exp1_cycles_Fe_200_ppm.csv  exp1_cycles_Fe_50_ppm.csv  exp1_cycles_Mg_1000_ppm.csv  exp1_cycles_Mg_200_ppm.csv  exp1_cycles_Mg_50_ppm.csv  exp1_cycles_O₂_species_1000_ppm.csv  exp1_cycles_O₂_species_200_ppm.csv  exp1_cycles_O₂_species_50_ppm.csv  exp1_cycles_Ultra-pure_baseline.csv  exp1_cycles_Water_1000_ppm.csv  exp1_cycles_Water_200_ppm.csv  exp1_cycles_Water_50_ppm.csv  exp3_fine_Fe.csv  exp3_fine_Mg.csv  experiment1_summary.csv  experiment2_summary.json  experiment3_fit_params.json  experiment3_summary.csv  statistical_analysis.json  statistical_tests.csv
src/: experiment1_pybamm_impurity_simulation.py  experiment2_baakes_analysis.py  experiment3_dose_response.py  experiment4_statistics.py  explore_data.py
(+6 files in other folders)
